fixed wrapping of Aufgabenliste und Personenliste

--- a/ReplanerAssist/wwwroot/css/app.css
+++ b/ReplanerAssist/wwwroot/css/app.css
@@ -13,11 +13,14 @@ a, .btn-link {
     box-shadow: none;
     text-decoration: none;
     font-size: 7px;
-    padding-left: 40px;
 }
 
 .pKreis {
     margin-top: 20px;
+}
+
+.col-pers-task {
+    flex: 1 0 80%
 }
 
 .content {
